Bug 77725 - LibreOffice not able to open/save file when exported multiple times.
Summary: LibreOffice not able to open/save file when exported multiple times.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Ravindra Vidhate
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-21 10:59 UTC by Ravindra Vidhate
Modified: 2014-05-21 10:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Original File (598.63 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-04-21 10:59 UTC, Ravindra Vidhate
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ravindra Vidhate 2014-04-21 10:59:41 UTC
Created attachment 97680 [details]
Original File

Problem description: 
The LO is not able to save the file if exported multiple times and the exported file is used as input.
The main root cause is Extra Line breaks getting added even though there is no text available.

In the attached file extra line break is getting added in footnote.xml


Steps to Reproduce:
1. Take the original file and export it to DOCX.
2. Take the exported file as a original file and export the same file once again to DOCX.
3. Take the exported file as input original file and export it again to DOCX.
4. Again, take exported file as original file and export it again to DOCX.

Current behavior:
1. LibreOffice is not able to open the file after 3rd round of export.

Expected behavior:
1. LibreOffice should be able to open and save the file which is already exported.
Comment 1 Jorendc 2014-04-21 19:05:05 UTC
Reproducible, tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: 619b4c40da9e85febbb08a3f7cf8aa8d10963fc1
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-04-18_00:07:53

Kind regards,
Joren
Comment 2 Jorendc 2014-04-25 20:12:44 UTC
*** Bug 77890 has been marked as a duplicate of this bug. ***
Comment 3 Commit Notification 2014-04-30 07:59:49 UTC
Ravindra Vidhate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=74126c42c309d3166235748980ee5e1e4a5fecb0

fdo#77725 LO not able to open/save file when exported multiple times.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Jorendc 2014-05-05 17:21:19 UTC
Looks fixed to me, I can not reproduce this bug anymore, tested using Windows 8.1 with LibreOffice Version: 4.3.0.0.alpha1+
Build ID: 82a623fb08afc72decb78f061b751a43ae503678
TinderBox: Win-x86@39, Branch:master, Time: 2014-05-05_06:37:16

Kind regards,
Joren
Comment 5 Commit Notification 2014-05-21 10:30:11 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=612e0c647ec9ef504a6ec1913c02b0d166d9aedc

fdo#77725 make testcase minimal



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.